--- a/app/src/main/res/layout/activity_track_profile.xml
+++ b/app/src/main/res/layout/activity_track_profile.xml
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:padding="2dp"
-                android:background="@drawable/android_photo" />
+                android:background="@mipmap/android_photo" />
 
 
             <android.support.v7.widget.CardView
