--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -32,17 +32,17 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/img_profile"
+                android:id="@+id/profile_image"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="30dp"
                 android:elevation="4dp"
-                android:src="@drawable/profile_person"
                 app:civ_border_color="@color/white"
                 app:civ_border_overlay="true"
                 app:civ_border_width="2dp"
                 tools:srcCompat="@tools:sample/avatars" />
+
 
             <LinearLayout
                 android:id="@+id/Part1"
@@ -88,7 +88,7 @@
                                 android:paddingEnd="20dp">
 
                                 <TextView
-                                    android:id="@+id/name"
+                                    android:id="@+id/profile_name"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Ibrahim Shaltout"
@@ -96,6 +96,7 @@
                                     android:textSize="20dp" />
 
                                 <android.support.v7.widget.AppCompatImageButton
+                                    android:id="@+id/profile_image_btn"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="end"
@@ -136,10 +137,10 @@
                             </LinearLayout>
 
                             <!--<View-->
-                                <!--android:layout_width="match_parent"-->
-                                <!--android:layout_height="1dp"-->
-                                <!--android:layout_marginTop="15dp"-->
-                                <!--android:background="@color/colorAccent" />-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="1dp"-->
+                            <!--android:layout_marginTop="15dp"-->
+                            <!--android:background="@color/colorAccent" />-->
 
 
                             <LinearLayout
@@ -339,25 +340,128 @@
                                 android:gravity="center"
                                 android:orientation="horizontal">
 
-                                <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                                    android:layout_width="53dp"
-                                    android:layout_height="57dp"
-                                    android:layout_margin="5dp"
-                                    android:src="@drawable/ic_universtiy_24dp" />
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:orientation="vertical">
 
-                                <TextView
+                                    <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                                        android:layout_width="53dp"
+                                        android:layout_height="57dp"
+                                        android:layout_margin="5dp"
+                                        android:src="@drawable/ic_universtiy_24dp" />
+                                </LinearLayout>
+
+                                <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_gravity="center"
-                                    android:layout_marginLeft="5dp"
-                                    android:gravity="center_vertical"
-                                    android:text=" computer science  "
-                                    android:textColor="@color/colorAccent"
-                                    android:textSize="15dp" />
+                                    android:orientation="vertical">
+
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="University : "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+
+                                        <TextView
+                                            android:id="@+id/profile_university"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="  "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="Field : "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+
+                                        <TextView
+                                            android:id="@+id/profile_college"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="   "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="Specialization : "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+
+                                        <TextView
+                                            android:id="@+id/profile_spec"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="match_parent"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="    "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="Grade : "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+
+                                        <TextView
+                                            android:id="@+id/profile_grade"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="   "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+                                    </LinearLayout>
+                                </LinearLayout>
+
                             </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
-
                 </android.support.v7.widget.CardView>
 
 
@@ -422,12 +526,13 @@
                                     android:src="@drawable/ic_skills_24dp" />
 
                                 <TextView
+                                    android:id="@+id/profile_skill"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_gravity="center"
                                     android:layout_marginLeft="5dp"
                                     android:gravity="center_vertical"
-                                    android:text="Accounting, Computer Programming, Freign Languages"
+                                    android:text=""
                                     android:textColor="@color/colorAccent"
                                     android:textSize="15dp" />
                             </LinearLayout>
@@ -499,12 +604,13 @@
                                     android:src="@drawable/ic_interests_24dp" />
 
                                 <TextView
+                                    android:id="@+id/profile_interest"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_gravity="center"
                                     android:layout_marginLeft="5dp"
                                     android:gravity="center_vertical"
-                                    android:text="Games ,Tech Hobbies, Team Sports (Basketball)  "
+                                    android:text="  "
                                     android:textColor="@color/colorAccent"
                                     android:textSize="15dp" />
                             </LinearLayout>
@@ -582,26 +688,58 @@
 
                                     android:orientation="vertical">
 
-                                    <TextView
-                                        android:layout_width="match_parent"
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_gravity="center"
-                                        android:layout_marginLeft="5dp"
-                                        android:gravity="center_vertical"
-                                        android:text="01005085446 "
-                                        android:textColor="@color/colorAccent"
-                                        android:textSize="15dp" />
+                                        android:orientation="horizontal">
 
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="Phone Number : "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
 
-                                    <TextView
-                                        android:layout_width="match_parent"
+                                        <TextView
+                                            android:id="@+id/profile_mobile"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:gravity="center_vertical"
+                                            android:text=" "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_gravity="center"
-                                        android:layout_marginLeft="5dp"
-                                        android:gravity="center_vertical"
-                                        android:text="Ibrahim.shaltout1996@gmail.com"
-                                        android:textColor="@color/colorAccent"
-                                        android:textSize="15dp" />
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:text="Email : "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+
+                                        <TextView
+                                            android:id="@+id/profile_email"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginLeft="5dp"
+                                            android:gravity="center_vertical"
+                                            android:text=" "
+                                            android:textColor="@color/colorAccent"
+                                            android:textSize="15dp" />
+                                    </LinearLayout>
+
                                 </LinearLayout>
                             </LinearLayout>
                         </LinearLayout>
