--- a/app/src/main/res/layout/messege_item.xml
+++ b/app/src/main/res/layout/messege_item.xml
@@ -22,7 +22,7 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/img_profile"
+        android:id="@+id/profile_image"
         android:layout_width="53dp"
         android:layout_height="57dp"
         android:src="@drawable/profile_person"
