--- a/app/src/main/res/layout/track_bar_item.xml
+++ b/app/src/main/res/layout/track_bar_item.xml
@@ -52,7 +52,7 @@
         android:text="@string/bio_profile2" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/profile_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/feed_item_status_pad_left_right"
