--- a/app/src/main/res/layout/track_recommendation_item.xml
+++ b/app/src/main/res/layout/track_recommendation_item.xml
@@ -48,7 +48,7 @@
             android:text="@string/bio_profile3" />
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/profile_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/feed_item_status_pad_left_right"
