--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -91,6 +91,13 @@
 
 
                     </RelativeLayout>
+                    <MultiAutoCompleteTextView
+                        android:id="@+id/add_hashTags"
+                        android:layout_width="match_parent"
+                        android:layout_gravity="center"
+                        android:gravity="start"
+                        android:layout_height="wrap_content"
+                        android:hint="#Add Hashtags"/>
 
                     <ImageView
                         android:id="@+id/new_post_image"
