--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -65,53 +65,75 @@
             android:paddingBottom="5dp"
             android:text="@string/bio_profile2" />
 
-        <!--<TextView-->
-        <!--android:id="@+id/name_image"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:linksClickable="true"-->
-        <!--android:paddingLeft="@dimen/feed_item_status_pad_left_right"-->
-        <!--android:paddingRight="@dimen/feed_item_status_pad_left_right"-->
-        <!--android:paddingBottom="10dp"-->
-        <!--android:text="www.google.com"-->
-        <!--android:textColorLink="@color/link" />-->
+        <TextView
+            android:id="@+id/post_hashTags"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:linksClickable="true"
+            android:paddingLeft="@dimen/feed_item_status_pad_left_right"
+            android:paddingRight="@dimen/feed_item_status_pad_left_right"
+            android:paddingBottom="10dp"
+            android:text="www.google.com"
+            android:textColorLink="@color/link" />
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/post_image"
-            android:layout_width="wrap_content"
-            android:layout_height="127dp"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
             android:scaleType="centerCrop"
             android:src="@drawable/cover" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/Number_Of_Likes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:text="" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:text="Like" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:gravity="center|left"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/Number_Of_Likes"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="00"/>
+
                 <ImageButton
                     android:id="@+id/thumbs_up"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_marginLeft="10dp"
-                    android:background="@drawable/ic_thumb_up_black" />
+                    android:layout_marginRight="10dp"
+                     />
 
                 <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:text="Likes" />-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="5dp"-->
+                <!--android:text="Likes" />-->
             </LinearLayout>
 
             <LinearLayout
@@ -125,13 +147,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+
                 <Button
                     android:id="@+id/post_comment1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:text="Comment"
-                    android:textStyle="bold"/>
+                    android:textColor="@color/colorAccent"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -140,8 +164,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:textStyle="bold"
-                android:text="Share"/>
+                android:text="Share"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
