--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/track_color"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".ToDoList.ToDoListActivity">
     <ScrollView
         android:layout_width="match_parent"
